fix: height of nav header on mobile shows toggle button

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -56,7 +56,7 @@
 
 #page-content-wrapper {
     overflow: hidden;
-    height: 10em;
+    /*height: 10em;*/
     width: 100%;
     position: absolute;
     padding: 15px;
